...
import org.rhasspy.mobile.viewmodel.navigation.NavigationDestination

/**
 * test tags to be used in compose
 */
enum class TestTag {
    List,
    AppBarBackButton,
    AppBarTitle,
    BottomAppBarDiscard,
    BottomAppBarSave,
    LibrariesContainer,
    MicrophoneOverlaySizeOptions,
    MicrophoneFab,
    Indication,
    Overlay,

    AudioPlayingOptions,
...
    Sensitivity,
    Download,
    SelectFile,
    PlayPause,
    Delete,
    Undo,
    EnabledSwitch,
    BatteryOptimization,
    VisibleWhileAppIsOpened,
    IndicationSoundScreen,

    WakeWordDetectionTurnOnDisplay,
    WakeWordLightIndicationEnabled,
    SoundIndicationEnabled,

    Disabled,
    Default,
    Warning,

    AudioFocusOption,
    AudioFocusSettingsConfiguration,
    AudioFocusOnNotification,
    AudioFocusOnSound,
    AudioFocusOnRecord,
    AudioFocusOnDialog,
    AudioFocusStopRecording,

    AudioRecorderEncodingType,
    AudioRecorderChannelType,
    AudioRecorderSampleRateType,

    AudioOutputEncodingType,
    AudioOutputChannelType,
    AudioOutputSampleRateType,

    Volume,
    MqttApi,
    HttpApi,
    HotWord,
    AudioOutput,
    IntentHandling,
    AutomaticSilenceDetectionSettingsConfiguration,
    AutomaticSilenceDetectionSettingsMinimumTime,
    AutomaticSilenceDetectionSettingsTime,
    AutomaticSilenceDetectionSettingsAudioLevelTest,
    AutomaticSilenceDetectionSettingsTest,
    CrashlyticsEnabled,
    ShowLogEnabled,
    AudioFramesEnabled,

    DialogManagementOptions,

    DialogOk,
    DialogCancel,
    DialogUnsavedChanges,
    DialogChangelogButton,
    DialogChangelog,
    DialogDataPrivacyButton,
    DialogDataPrivacy,
    DialogLibrary,
    DialogServiceState,
    DialogCrashlytics,
    DialogMicrophonePermissionInfo,
    DialogOverlayPermissionInfo,
    DialogNotificationPermissionInfo,
    DialogSaveSettings,
...
