package org.rhasspy.mobile.viewModels.settings.sound

enum class SoundFileFolder {
    Wake,
    Recorded,
    Error
}